--- a/frontend/src/components/mainDisplay/display.css
+++ b/frontend/src/components/mainDisplay/display.css
@@ -1,25 +1,21 @@
 .main-display {
-  max-height: 100%;
-  max-width: 100%;
+  height: 550px;
+
+  max-width: 96%;
   display: grid;
   grid-template: 1fr / 1fr;
   place-items: center;
 }
 
 .main-display > * {
+  max-height: 100%;
+  max-width: 100%;
   grid-column: 1 / 1;
   grid-row: 1 / 1;
 }
 
-.display-container {
-  z-index: 1;
-  margin: auto;
-}
-
 .display-image {
   z-index: 1;
-  width: 100%;
-  height: 100%;
 }
 
 .loading-animation-container {
